# agentic_ai

./: README.md
01_uv/project_1/explore-uv/: pyproject.toml
01_uv/uv-project2/: pyproject.toml
02_openrouter/: global.py  main.py  pyproject.toml  run.py
03_litellm_openai_agent/my_project/: pyproject.toml
03_litellm_openai_agent/uv_litellm_chainlite_chatbot/: chat_history.json  pyproject.toml
04_hello_agent/asynchello_agent/: pyproject.toml
04_hello_agent/synchello_agent/: pyproject.toml
05_chainlit/helloworld/: pyproject.toml
