[project]
name = "uv-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asma yaseen", email = "159251930+Asmayaseen@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uv-project2 = "uv_project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
