[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asma yaseen", email = "159251930+Asmayaseen@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.71.3",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
